[package]
name = "wg-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.8" }
home = "0.5.5"
thiserror = "1.0.40"
config = "0.13.3"
serde = "1.0.164"
serde_derive = "1.0.164"
inquire = "0.6.2"
regex = "1.9.1"
convert_case = "0.6.0"
handlebars = "4.3.7"
serde_json = "1.0.104"
