[package]
name = "wg-mod"
version = "0.3.0"
edition = "2021"
authors = ["Gabriel Hamel <gabriel.hamel.pro@gmail.com>"]
repository = "https://github.com/gabrielhamel/wg-mod"
homepage = "https://github.com/gabrielhamel/wg-mod"
description = "A CLI to help people making WorldOfTanks mods"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "wot", "WorldOfTanks", "modding"]

[dependencies]
clap = { version = "4.3.8" }
home = "0.5.5"
thiserror = "1.0.40"
config = "0.13.3"
serde = "1.0.164"
serde_derive = "1.0.164"
inquire = "0.6.2"
regex = "1.9.1"
convert_case = "0.6.0"
handlebars = "4.3.7"
serde_json = "1.0.104"
tempfile = "3.8.0"
indicatif = "0.17.6"
reqwest = {version = "0.11.19", features = ["stream"]}
tokio = {version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"]}
futures-util = "0.3.28"
spinners = "4.1.0"
