[package]
name = "wg-mod"
version = "0.12.0"
edition = "2021"
authors = ["Gabriel Hamel <gabriel.hamel.pro@gmail.com>"]
repository = "https://github.com/gabrielhamel/wg-mod"
homepage = "https://github.com/gabrielhamel/wg-mod"
description = "A CLI to help people making WorldOfTanks mods"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "wot", "WorldOfTanks", "modding"]

[dependencies]
clap = { version = "4.5.20" }
home = "0.5.9"
thiserror = "1.0.64"
config = "0.14.0"
serde = "1.0.210"
serde_derive = "1.0.210"
inquire = "0.7.5"
regex = "1.11.0"
convert_case = "0.6.0"
handlebars = "6.1.0"
serde_json = "1.0.128"
tempfile = "3.13.0"
reqwest = {version = "0.12.8", features = ["stream", "blocking"]}
fs_extra = "1.3.0"
glob = "0.3.1"
zip = "2.2.0"
zip-extensions = "0.8.1"
git2 = "0.19.0"
